--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,10 @@
   <title>Intuit</title>
   <%= stylesheet_link_tag :all %>
   <%= javascript_include_tag :defaults %>
-  <%= csrf_meta_tag %>
+   <%= csrf_meta_tag %>
+  <%= yield(:head) %>
+
+
 </head>
 <body>
 
